Flex box style issue on Safari

--- a/style.css
+++ b/style.css
@@ -606,6 +606,7 @@ p {
 
 .description .separator {
   /* padding: 0 10rem; */
+  flex-shrink: 0;
   width: 0.5rem;
   height: 0.5rem;
   border-radius: 50%;
